# CardStock

./: CMakeLists.txt  README.md  main.cpp
example/JSON/ActionParser/: ActionParser_1.json
example/JSON/Card/: Card_1.json  Card_2.json  Card_3.json
example/JSON/CardZone/: CardZone_1.json
example/JSON/CardZoneMap/: CardZoneMap_1.json  CardZoneMap_2.json
example/JSON/EngineConfig/: EngineConfig_1.json  EngineConfig_2.json
example/JSON/EventParser/: EventParser_1.json
example/JSON/FullGame/: uno.json
example/JSON/GameState/: GameState_1.json
example/JSON/Player/: Player_1.json
example/JSON/PlayerList/: PlayerList_1.json  PlayerList_2.json
include/: ActionHandler.h  ActionsParser.h  Card.h  CardZone.h  CardZoneMap.h  Engine.h  EventManager.h  EventsParser.h  GameState.h  Player.h  PlayerList.h  TurnManager.h
include/nlohmann/: json.hpp
src/: ActionHandler.cpp  ActionsParser.cpp  Card.cpp  CardZone.cpp  CardZoneMap.cpp  Engine.cpp  EventManager.cpp  EventsParser.cpp  GameState.cpp  Player.cpp  PlayerList.cpp  TurnManager.cpp
tests/: ActionHandlerTest.cpp  ActionTest.cpp  CardTest.cpp  CardZoneMapTest.cpp  CardZoneTest.cpp  ConditionTest.cpp  EffectActionTest.cpp  EffectTest.cpp  EngineTest.cpp  EventManagerTest.cpp  EventTest.cpp  GameStateTest.cpp  PlayerListTest.cpp  PlayerTest.cpp  TurnManagerTest.cpp
util/: Action.cpp  Action.h  Condition.cpp  Condition.h  Effect.cpp  Effect.h  EffectAction.cpp  EffectAction.h  Event.cpp  Event.h
